--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,21 @@
 }
 h1 {
   color: var(--primary-color);
+  text-align: center;
+}
+
+.container1 {
+  position: relative;
+  width: 550px;
+  height: 50px;
+}
+
+.link {
+  text-decoration: none;
+  color: var(--tertiary-color);
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 img {
@@ -23,4 +38,25 @@ ul {
 }
 ul li::before {
   content: "🥣 ";
+}
+
+ol {
+  list-style: none;
+  counter-reset: item;
+}
+
+ol li {
+  counter-increment: item;
+  margin-bottom: 5px;
+}
+
+ol li:before {
+  margin-right: 10px;
+  content: counter(item);
+  background: var(--tertiary-color);
+  border-radius: 100%;
+  color: white;
+  width: 1.2em;
+  text-align: center;
+  display: inline-block;
 }
