--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,17 @@
+* {
+  font-family: Arial, Arial, Helvetica, sans-serif;
+  font-weight: 100;
+}
 :root {
   --primary-color: #05407f;
   --secondary-color: #52565a;
   --tertiary-color: #ff7b00;
 }
+h1,
+h2 {
+  font-weight: 800;
+}
+
 h1 {
   color: var(--primary-color);
   text-align: center;
@@ -29,6 +38,11 @@ img {
 
   border-radius: 8px;
 }
+
+p {
+  text-align: justify;
+  margin: 50px;
+}
 h2 {
   color: var(--secondary-color);
 }
@@ -47,6 +61,7 @@ ol {
 
 ol li {
   counter-increment: item;
+  margin: 20px;
   margin-bottom: 5px;
 }
 
