Change link style on index.html and fix link style on recipe page

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@
   --secondary-color: #52565a;
   --tertiary-color: #ff7b00;
 }
+
+.links {
+  text-decoration: none;
+  color: var(--tertiary-color);
+}
 h1,
 h2 {
   font-weight: 800;
