--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
-  font-family: Arial, Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 100;
+  outline: 2px solid red;
 }
 :root {
   --primary-color: #05407f;
@@ -20,6 +21,7 @@ h2 {
 h1 {
   color: var(--primary-color);
   text-align: center;
+  font-size: 5rem;
 }
 
 .container1 {
