--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,8 @@ p {
 p::first-letter {
   font-size: 4rem;
   color: var(--tertiary-color);
+  float: left;
+  margin-right: 1rem;
 }
 h2 {
   color: var(--secondary-color);
